8270083: -Wnonnull errors happen with GCC 11.1.1

Reviewed-by: shade
Backport-of: 68b6e11e481349e40014aa4593a53ae2ea74aedc